# smartcomment

./: LICENSE  README.md  pyproject.toml
docs/: concepts.md  fine_grained_tracing.md  in_place_operation.md  operation_reuse.md  quick_start.md  tricks.md  visualization.md
smartcomment/: __init__.py  debugging.py  logging.py
smartcomment/analysis/: __init__.py
smartcomment/analysis/visualization/: __init__.py  _utils.py  graphviz.py  pyvis.py
smartcomment/api/: __init__.py  _helpers.py  _mutation.py  public.py
smartcomment/drivers/: __init__.py  base.py  in_memory.py
smartcomment/identity/: __init__.py  registry.py
smartcomment/runtime/: __init__.py  context.py  errors.py  graph.py  network.py  operation.py  session.py  variable.py
smartcomment/schema/: __init__.py  base.py  operation.py  session.py  variable.py
tests/: helpers.py  test_bfs.py  test_comment_fn.py  test_comment_link.py  test_comment_variable.py  test_context_managers.py  test_core_api.py  test_debugging.py  test_drivers.py  test_graph_query.py  test_metadata_propagation.py  test_operation_reuse.py  test_runtime_graph_set_ops.py  test_search.py  test_sessions.py  test_strict_mode.py  test_tracing_context.py
